@@ -119,17 +119,17 @@ be_provides::gen_facet_svnt_decl (TAO_OutStream &os)
         }
     }
 
-  os << be_nl << be_nl << "// Get component implementation." << be_nl
+  os << be_nl << be_nl << "/// Get component implementation." << be_nl
      << "virtual CORBA::Object_ptr _get_component (void);"
      << be_uidt_nl << be_nl;
 
   os << "protected:" << be_idt_nl;
 
-  os << "// Facet executor." << be_nl
+  os << "/// Facet executor." << be_nl
      << global << sname << "::CCM_"
      << lname << "_var executor_;" << be_nl << be_nl;
 
-  os << "// Context object." << be_nl
+  os << "/// Context object." << be_nl
      << "::Components::CCMContext_var ctx_;" << be_uidt_nl;
 
   os << "};" << be_nl << be_uidt_nl;
@@ -239,9 +239,18 @@ be_provides::gen_facet_svnt_defn (TAO_OutStream &os)
      << "Context::_narrow (this->ctx_.in ());"
      << be_uidt_nl << be_nl
      << "if (! ::CORBA::is_nil (sc.in ()))" << be_idt_nl
-     << "{" << be_idt_nl
-     << "return sc->get_CCM_object ();" << be_uidt_nl
-     << "}" << be_uidt_nl << be_nl;
+     << "{" << be_idt_nl;
+
+  if (ACE_OS::strcmp (be_global->ciao_container_type (), "Session") == 0)
+    {
+      os << "return sc->get_CCM_object ();";
+    }
+  else
+    {
+      os << "return ::CORBA::Object::_nil ();";
+    }
+
+  os << be_uidt_nl << "}" << be_uidt_nl << be_nl;
 
   os << "throw ::CORBA::INTERNAL ();" << be_uidt_nl
      << "}";
